--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -106,6 +106,11 @@ jobs:
             echo Secret DOMAIN_NAME is not set in repository secrets. Make sure this secret exists in the repository secrets.
             ERROR=true
           fi
+          if [ -z "${{ secrets.DATADOG_API_KEY }}" ]
+          then
+            echo Secret DATADOG_API_KEY is not set in repository secrets. Make sure this secret exists in the repository secrets.
+            ERROR=true
+          fi
           if [ ! -z "$ERROR" ]
           then
             echo
@@ -441,14 +446,6 @@ jobs:
       ###
       ### INSTALL AND CONFIGURE FLUX V2 ###
       ###
-      - id: platform-monitoring-enabled
-        name: Get config for whether monitoring should be enabled for deployment
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq '.[env(ENVIRONMENT_NAME)].monitoringEnabled' 'infra/config/github-environments-config.yaml'
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
-
       - id: using-self-signed-certificate
         name: Get config for whether deployment is using self-signed certificate
         uses: mikefarah/yq@master
@@ -460,6 +457,8 @@ jobs:
       - id: fill-account-specific-metadata
         name: Fill in account specific metadata in ConfigMap
         run: |-
+          export DATADOG_API_KEY="${{ secrets.DATADOG_API_KEY }}"
+
           yq -i '
             .myAccount.domainName = strenv(DOMAIN_NAME) |
             .myAccount.region = strenv(AWS_REGION) |
@@ -467,21 +466,16 @@ jobs:
             .myAccount.publicFacing = strenv(PUBLIC_FACING) |
             .myAccount.acmCertificate = strenv(ACM_CERTIFICATE_ARN) |
             .myAccount.selfSignedCertificate = strenv(SELF_SIGNED_CERTIFICATE) |
-            .myAccount.datadogEnabled = strenv(MONITORING_ENABLED) |
-            .myAccount.datadogApiKey = ""
+            .myAccount.datadogEnabled = "true" |
+            .myAccount.datadogApiKey = strenv(DATADOG_API_KEY)
           ' infra/config/account-config.yaml
-          if [[ $MONITORING_ENABLED = "true" ]]
-          then
-            export API_KEY="${{ secrets.DATADOG_API_KEY }}"
-            yq -i '.myAccount.datadogApiKey = strenv(API_KEY)' infra/config/account-config.yaml
-          fi
+
           cat infra/config/account-config.yaml
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
           DOMAIN_NAME: ${{ steps.setup-domain.outputs.domain-name }}
           ACM_CERTIFICATE_ARN: ${{ secrets.ACM_CERTIFICATE_ARN }}
-          MONITORING_ENABLED: ${{ steps.platform-monitoring-enabled.outputs.result }}
           PUBLIC_FACING: ${{ steps.platform-public-facing.outputs.result }}
           SELF_SIGNED_CERTIFICATE: ${{ steps.using-self-signed-certificate.outputs.result }}
 
