--- a/charts/nodejs/templates/kubernetes-event-exporter.yaml
+++ b/charts/nodejs/templates/kubernetes-event-exporter.yaml
@@ -10,6 +10,9 @@ kind: ServiceAccount
 metadata:
   namespace: monitoring
   name: event-exporter
+  annotations:
+    eks.amazonaws.com/role-arn: "arn:aws:iam::242905224710:role/event-exporter-role-staging"
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
