--- a/cf/sns-forwarder-lambda.yaml
+++ b/cf/sns-forwarder-lambda.yaml
@@ -69,9 +69,11 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: !Sub sns-endpoint-lambda-${Environment}
-      Runtime: python3.8
+      # Using 3.7 so that we can import requests directly from botocore. See https://stackoverflow.com/a/48495770/1940886
+      # Otherwise we'd have to upload the Lambda code and its dependencies to S3 and use the files from there.
+      Runtime: python3.7
       Role: !GetAtt SNSEndpointLambdaRole.Arn
-      Handler: lambda_handler
+      Handler: index.lambda_handler
       Environment:
         Variables:
           DOMAIN_NAME: !If [
@@ -81,64 +83,67 @@ Resources:
                       ]]
       Code:
         ZipFile: |
+          from botocore.vendored import requests
+          import json
           import os
 
-          print("EVENT: ", event)
-          sns_message_payload = event["Records"][0]["Sns"]
+          def lambda_handler(event, context):
+            print("EVENT: ", event)
+            sns_message_payload = event["Records"][0]["Sns"]
 
-          message_body = json.loads(sns_message_payload["Message"])
+            message_body = json.loads(sns_message_payload["Message"])
 
-          if message_body.get("experimentId"):
-              print("[experimentId] ", message_body.get("experimentId"))
-          else:
-              print("Kubernetes event")
+            if message_body.get("experimentId"):
+                print("[experimentId] ", message_body.get("experimentId"))
+            else:
+                print("Kubernetes event")
 
-          url = ""
+            url = ""
 
-          sns_message_headers = {
-              "x-amz-sns-message-id": sns_message_payload['MessageId'],
-              "x-amz-sns-message-type": sns_message_payload["Type"],
-              "x-amz-sns-subscription-arn" : event["Records"][0]["EventSubscriptionArn"],
-              "x-amz-sns-topic-arn" : sns_message_payload["TopicArn"],
-              "Content-Type": "text/plain",
-              'Connection':'close'
-          }
+            sns_message_headers = {
+                "x-amz-sns-message-id": sns_message_payload['MessageId'],
+                "x-amz-sns-message-type": sns_message_payload["Type"],
+                "x-amz-sns-subscription-arn" : event["Records"][0]["EventSubscriptionArn"],
+                "x-amz-sns-topic-arn" : sns_message_payload["TopicArn"],
+                "Content-Type": "text/plain",
+                'Connection':'close'
+            }
 
-          application_json_headers = {
-              "Content-Type": "application/json"
-          }
+            application_json_headers = {
+                "Content-Type": "application/json"
+            }
 
-          if message_body.get("reason") == "BackOff":
-              data = message_body
-              headers = application_json_headers
-              url = f"{os.getenv('DOMAIN_NAME')}/v2/kubernetesEvents"
-          elif sns_message_payload["MessageAttributes"]["type"]["Value"] == "PipelineResponse":
-              url = f"{message_body.get('apiUrl')}/v2/pipelineResults"
-              data = sns_message_payload
-              headers = sns_message_headers
-          elif sns_message_payload["MessageAttributes"]["type"]["Value"] == "GEM2SResponse":
-              url = f"{message_body.get('apiUrl')}/v2/gem2sResults"
-              data = sns_message_payload
-              headers = sns_message_headers
+            if message_body.get("reason") == "BackOff":
+                data = message_body
+                headers = application_json_headers
+                url = f"{os.getenv('DOMAIN_NAME')}/v2/kubernetesEvents"
+            elif sns_message_payload["MessageAttributes"]["type"]["Value"] == "PipelineResponse":
+                url = f"{message_body.get('apiUrl')}/v2/pipelineResults"
+                data = sns_message_payload
+                headers = sns_message_headers
+            elif sns_message_payload["MessageAttributes"]["type"]["Value"] == "GEM2SResponse":
+                url = f"{message_body.get('apiUrl')}/v2/gem2sResults"
+                data = sns_message_payload
+                headers = sns_message_headers
 
-          print("[ENDPOINT CALLED] ", url)
-          print("[DATA PAYLOAD] ", json.dumps(data))
+            print("[ENDPOINT CALLED] ", url)
+            print("[DATA PAYLOAD] ", json.dumps(data))
 
-          try:
-              r = requests.post(url = url, data = json.dumps(data), headers = headers, verify=False, timeout=300)
-              print("[SUCCESS] ", r.content)
-              print("***********************")
-              return {
-                  'statusCode': 200,
-                  'body': {"alles": "gut"}
-              }
-          except Exception as e:
-              print("[FAILURE] ", e)
-              print("***********************")
-              return {
-                  'statusCode': 500,
-                  'body': {"error": "yes"}
-              }
+            try:
+                r = requests.post(url = url, data = json.dumps(data), headers = headers, verify=False, timeout=300)
+                print("[SUCCESS] ", r.content)
+                print("***********************")
+                return {
+                    'statusCode': 200,
+                    'body': {"alles": "gut"}
+                }
+            except Exception as e:
+                print("[FAILURE] ", e)
+                print("***********************")
+                return {
+                    'statusCode': 500,
+                    'body': {"error": "yes"}
+                }
 
   SNSEndpointInvocationPermission:
     Type: AWS::Lambda::Permission
