--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -83,7 +83,7 @@ jobs:
       - id: add-kubeconfig
         name: Add k8s config file for existing cluster.
         run: |-
-          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
+            aws eks update-kubeconfig --name biomage-$CLUSTER_ENV --role-arn arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
 
       - id: install-helm
         name: Install Helm
@@ -136,7 +136,7 @@ jobs:
             --arn arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/state-machine-role-$CLUSTER_ENV \
             --group state-machine-runner-group \
             --username state-machine-runner
-      
+
       # see https://eksctl.io/usage/iam-identity-mappings/
       - id: update-identitymapping-admin
         name: Add cluster admin rights to everyone on the admin list.
