--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -268,7 +268,7 @@ jobs:
       - id: add-kubeconfig
         name: Add k8s config file for existing cluster.
         run: |-
-          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV --role-arn arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
+          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
       - id: deploy-metrics-server
         name: Deploy k8s metrics server
@@ -665,7 +665,7 @@ jobs:
       - id: add-kubeconfig
         name: Add k8s config file for existing cluster.
         run: |-
-          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV --role-arn arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
+          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
       - id: install-eksctl
         name: Install eksctl
