add max session duration

--- a/infra/cf-github-oidc.yaml
+++ b/infra/cf-github-oidc.yaml
@@ -8,6 +8,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       RoleName: ci-iac-role
+      MaxSessionDuration: 7200
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
