--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -21,8 +21,8 @@ Conditions:
 Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    DependsOn:
-      - ALBLogsBucketPermission
+    # DependsOn:
+    #   - ALBLogsBucketPermission
     Properties:
       Name: !Sub "k8s-${Environment}"
       IpAddressType: ipv4
@@ -33,12 +33,12 @@ Resources:
           Value: "true"
         - Key: routing.http.drop_invalid_header_fields.enabled
           Value: "true"
-        - Key: access_logs.s3.enabled
-          Value: "true"
-        - Key: access_logs.s3.bucket
-          Value: !Ref ALBLogsBucket
-        - Key: access_logs.s3.prefix
-          Value: !Sub "k8s-${Environment}"
+        # - Key: access_logs.s3.enabled
+        #   Value: "true"
+        # - Key: access_logs.s3.bucket
+        #   Value: !Ref ALBLogsBucket
+        # - Key: access_logs.s3.prefix
+        #   Value: !Sub "k8s-${Environment}"
       Scheme: !If [isPublic, "internet-facing", "internal"]
       Subnets:
         Fn::Split:
@@ -78,19 +78,19 @@ Resources:
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 7
 
-  ALBLogsBucketPermission:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket: !Ref ALBLogsBucket
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Action:
-              - 's3:PutObject'
-            Effect: Allow
-            Principal:
-              AWS: !Ref "AWS::AccountId"
-            Resource: !Join [ "", [!GetAtt ALBLogsBucket.Arn, !Sub "/k8s-${Environment}/*"]]
+  # ALBLogsBucketPermission:
+  #   Type: AWS::S3::BucketPolicy
+  #   Properties:
+  #     Bucket: !Ref ALBLogsBucket
+  #     PolicyDocument:
+  #       Version: "2012-10-17"
+  #       Statement:
+  #         - Action:
+  #             - 's3:PutObject'
+  #           Effect: Allow
+  #           Principal:
+  #             AWS: !Ref "AWS::AccountId"
+  #           Resource: !Join [ "", [!GetAtt ALBLogsBucket.Arn, !Sub "/k8s-${Environment}/*"]]
 
 Outputs:
   CanonicalHostedZoneID:
