--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -33,7 +33,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        environment-name: [Biomage, trv, alabs]
+        # environment-name: [Biomage, trv, alabs]
+        environment-name: [alabs]
     environment: ${{ matrix.environment-name }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -159,7 +160,8 @@ jobs:
       max-parallel: 1
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        environment-name: [Biomage, trv, alabs]
+        # environment-name: [Biomage, trv, alabs]
+        environment-name: [alabs]
         exclude:
           - environment-name: trv
             environment-type: staging
@@ -255,7 +257,8 @@ jobs:
       max-parallel: 1
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        environment-name: [Biomage, trv, alabs]
+        # environment-name: [Biomage, trv, alabs]
+        environment-name: [alabs]
         exclude:
           - environment-name: trv
             environment-type: staging
