--- a/infra/cf-route53.yaml
+++ b/infra/cf-route53.yaml
@@ -18,9 +18,13 @@ Parameters:
     Type: String
     Description: The URL of the domain to apply the change to.
 
-  HostedZoneId:
+  Route53HostedZoneId:
     Type: String
-    Description: The ID of the hosted zone
+    Description: The ID of the Route53 hosted zone
+
+  ELBHostedZoneId:
+    Type: String
+    Description: The ID of the ELB hosted zone
 
 Outputs:
   DomainName:
@@ -32,16 +36,16 @@ Resources:
   IngressControllerMapping:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      HostedZoneId: !Ref HostedZoneId
+      HostedZoneId: !Ref Route53HostedZoneId
       Comment: !Sub "Routing for Biomage SCP ${Environment} cluster"
       RecordSets:
       - Name: !Ref DomainName
         Type: A
         AliasTarget:
           DNSName: !Ref DNSName
-          HostedZoneId: !Ref HostedZoneId
+          HostedZoneId: !Ref ELBHostedZoneId
       - Name: !Join ['.', ['*', !Ref DomainName]]
         Type: A
         AliasTarget:
           DNSName: !Ref DNSName
-          HostedZoneId: !Ref HostedZoneId
+          HostedZoneId: !Ref ELBHostedZoneId
