--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -74,8 +74,9 @@ Resources:
                 Action: 'sns:*'
                 Resource:
                   - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:work-results-${Environment}-*"
-                  - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:cloudwatch-alarms-{Environment}"
+                  - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:cloudwatch-alarms-${Environment}"
                   - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:cloudwatch-validation-alarms"
+                  - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:post-registration-user-access-${Environment}-*"
 
         - PolicyName: !Sub "can-access-${Environment}-eks-cluster"
           PolicyDocument:
